<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ecwid</groupId>
  <artifactId>deep-copy</artifactId>
  <version>0.0.1</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven-failsafe.version>3.0.0-M7</maven-failsafe.version>
    <maven-surefire.version>3.0.0-M7</maven-surefire.version>
    <exec-maven.version>3.0.0</exec-maven.version>
    <junit-jupiter.version>5.9.2</junit-jupiter.version>
    <lib.module.name>com.ecwid.dev.deep.copy</lib.module.name>
  </properties>

  <dependencies>
    <!-- ... -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- ... -->
  </dependencies>
  <build>

    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${exec-maven.version}</version>
        <configuration>
          <arguments>
            <argument>--add-opens</argument>
            <argument>java.base/java.util=${lib.module.name}</argument>
            <argument>--add-opens</argument>
            <argument>java.base/java.lang=${lib.module.name}</argument>
          </arguments>
          <mainClass>com.ecwid.dev.examples.Demo</mainClass>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire.version}</version>
        <configuration>
          <argLine>
            --add-opens=java.base/java.util=${lib.module.name}
            --add-opens=java.base/java.lang=${lib.module.name}
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe.version}</version>
      </plugin>
    </plugins>
  </build>

</project>
